<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>social_nav_utils</name>
    <version>0.9.3</version>
    <description>social_nav_utils package</description>
    <author email="chromedivizer@gmail.com">Jarosław Karwowski</author>
    <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>
    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <depend>angles</depend>
    <depend>Eigen3</depend>
</package>
